<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="enter_search_term">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="send_to">Share image to..</string>
    <string-array name="image_size_array">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
        <item>icon</item>
    </string-array>
    <string-array name="image_color_array">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string-array name="image_type_array">
        <item>photo</item>
        <item>face</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
        <string name="save">Save</string>
        <string name="advanced_search">Advanced Search Options</string>
        <string name="image_size">Image Size</string>
        <string name="color_filter">Color Filter</string>
        <string name="image_type">Image Type</string>
        <string name="site_filter">Site Filter</string>

</resources>
